--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
-    "angular-scenario": "1.2.6"
+    "angular-scenario": "1.2.6",
+    "angular-smoothscroll": "*"
   }
 }
