--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "karma-phantomjs-launcher": "~0.1.2",
     "karma": "~0.10.9",
     "karma-ng-html2js-preprocessor": "~0.1.0",
-    "grunt-gh-pages": "~0.9.1"
+    "grunt-gh-pages": "~0.9.1",
+    "grunt-bower-task": "~0.3.4"
   },
   "engines": {
     "node": ">=0.8.0"
@@ -49,8 +50,8 @@
   "scripts": {
     "test": "grunt test"
   },
-  "repository" :
-  { "type" : "git"
-     , "url" : "http://github.com/npm/npm.git"
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/npm/npm.git"
   }
 }
