--- a/bower.json
+++ b/bower.json
@@ -1,20 +1,19 @@
 {
   "name": "ariegenzik",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "dependencies": {
     "angular": "1.2.6",
     "json3": "~3.2.6",
     "es5-shim": "~2.1.0",
     "jquery": "1.8.3",
-    "bootstrap": "*",
     "angular-resource": "1.2.6",
     "angular-cookies": "1.2.6",
     "angular-sanitize": "1.2.6",
     "angular-route": "1.2.6",
-    "angular-leaflet-directive": "*",
-    "Leaflet.awesome-markers": "*",
-    "angular-smoothscroll": "*",
-    "leaflet-fullscreen": "*"
+    "angular-scrollto": "~0.1.4",
+    "angular-leaflet-directive": "~0.7.6",
+    "Leaflet.awesome-markers": "~2.0.2",
+    "bootstrap": "~3.1.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
